--- a/recipes-connectivity/rndisload/files/rndis.service
+++ b/recipes-connectivity/rndisload/files/rndis.service
@@ -1,8 +1,12 @@
 [Unit]
 Description=Initialize RNDIS on usb0
+After=network.target
 
 [Service]
 Type=oneshot
 ExecStart=/sbin/rndisload
 ExecStop=/sbin/rndisunload
 RemainAfterExit=yes
+
+[Install]
+WantedBy=multi-user.target
