new flir distro
based on yocto 2.0 flir distro and freescale fsl-imx-fsb distro

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,4 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "6"
-FETCHCOMMAND_p4 = "p4"
+
+BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
