--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -148,6 +148,7 @@ ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
 # Use i.MX Kernel, U-Boot and Gstreamer 1.0 providers
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-imx"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-imx"
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils"
 
 PREFERRED_VERSION_linux-libc-headers_imx = "4.9"
 
