SDK naming compatible with older SDKs

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -6,7 +6,7 @@ DISTRO_NAME = "FlirSystem"
 DISTRO_VERSION = "${SRCDATE}"
 DISTRO_CODENAME = "rocko"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "${DISTRO_VERSION}"
+SDK_VERSION := "2.4"
 
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
@@ -28,7 +28,7 @@ DISTRO_FEATURES_remove = "x11 wayland directfb pango"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
-SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
+SDKPATH = "/opt/poky/${SDK_VERSION}"
 
 #Specifies a suffix to be appended onto the TMPDIR value. 
 TCLIBCAPPEND = ""
