Enable usage of p4 based recipes
To be able to fetch source from "p4://" in yocto2.4:
1. the p4 command must be available at a system location
   (/usr/bin, /usr/local/bin ...). PATH is overridden by yocto
2. A HOSTTOOLS_append must mention that p4 should be used from system
   and needs to be known by yocto
3. It does not seem enough to set this up in a .bb locally,
   It must be set system wide. Therefore the suggested place here is in
   the distro (flir.conf)
   (local .bb HOSTTOOLS_append commented for clarification)

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -10,6 +10,8 @@ SDK_VERSION := "2.4"
 
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
+# Additional p4 tool addition - might be solved better?
+HOSTTOOLS_append = " p4"
 
 ########################################################################
 # DISTRO FEATURE SELECTION
