flir distro: add wayland (weston) and pam to distro
flir-image-bblc: add qt and weston to image

optimize image size and free space on ext4 image by removing overhead factor
and set free space to 10MB

qt is configured by fsl meta layers (qtbase_%.bbappend)
to override this add your own qtbase_%.bbappend file

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -21,11 +21,11 @@ IMAGE_FSTYPES = "tar.bz2 ext4 sdcard.bz2"
 
 FLIR_DISTRO_FEATURES = "ipv4 systemd  usbhost usbgadget opengl"
 FLIR_DISTRO_FEATURES += "wifi bluetooth pulseaudio alsa bluez5"
-FLIR_DISTRO_FEATURES += "eabi largefile"
+FLIR_DISTRO_FEATURES += "eabi largefile wayland pam"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${FLIR_DISTRO_FEATURES}"
 
-DISTRO_FEATURES_remove = "x11 wayland directfb pango"
+DISTRO_FEATURES_remove = "x11 directfb pango"
 # Do not add in the backfilled distro features listed below
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
@@ -73,10 +73,10 @@ PREFERRED_VERSION_gnupg ?= "1.4.7"
 DEFAULT_TIMEZONE = "Europe/Paris"
 
 # maximum allowed rootfs size in kB
-IMAGE_ROOTFS_MAXSIZE ?= "250000"
-#IMAGE_OVERHEAD_FACTOR ?= "1"
-#leave 1MB free space on rootfs
-#IMAGE_ROOTFS_EXTRA_SPACE ?= "1024"
+IMAGE_ROOTFS_MAXSIZE ?= "2500000"
+IMAGE_OVERHEAD_FACTOR = "1"
+#leave 10MB free space on rootfs
+IMAGE_ROOTFS_EXTRA_SPACE = "10000"
 
 #use no prefix or we will get conflicting _ in kernel module name
 KERNEL_MODULE_PACKAGE_SUFFIX = ""
