meta-flir-base: Adaptions to be used in yocto2.5
- Newer parts used (distro/flir.conf)
- meta-fsl-bsp-release/imx/meta-bsp/recipes-security not to be masked
  (layer.conf)
- core-image-minimal leaves out not yet integrated flir m4 code + redpine fw
- kernel 4.9.11 (old kernel) not present anymore in meta-fsl-bsp-release
  (not append:able, need to remove the .bbappend)
- flir-setup-release.sh slightly changed to match corresponding
  fsl-setup-release.sh
- fsl-image-qt5-sdk adapted to moved file in fsl layer

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -4,9 +4,9 @@
 DISTRO = "flir"
 DISTRO_NAME = "FlirSystem"
 DISTRO_VERSION = "${SRCDATE}"
-DISTRO_CODENAME = "rocko"
+DISTRO_CODENAME = "sumo"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "2.4"
+SDK_VERSION := "2.5"
 
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
@@ -68,7 +68,7 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 PREFERRED_PROVIDER_udev ?= "systemd"
 PREFERRED_PROVIDER_udev-systemd ?= "systemd"
 PREFERRED_PROVIDER_udev-utils ?= "systemd"
-PREFERRED_VERSION_gnupg ?= "1.4.7"
+#PREFERRED_VERSION_gnupg ?= "2.2.4"
 
 DEFAULT_TIMEZONE = "Europe/Paris"
 
@@ -152,7 +152,7 @@ PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-imx"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-imx"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils"
 
-PREFERRED_VERSION_linux-libc-headers_imx = "4.9"
+PREFERRED_VERSION_linux-libc-headers_imx = "4.14"
 
 MACHINE_GSTREAMER_1_0_PLUGIN_mx6ul = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx6sll = "imx-gst1.0-plugin"
@@ -183,16 +183,16 @@ PREFERRED_PROVIDER_virtual/libgles1_mx7ulp = "imx-gpu-viv"
 PREFERRED_PROVIDER_virtual/libgles2_mx7ulp = "imx-gpu-viv"
 PREFERRED_PROVIDER_virtual/libgl_mx7ulp = "imx-gpu-viv"
 
-GRAPHICS_VERSION            ?= "6.2.4.p1.2"
+GRAPHICS_VERSION            ?= "6.2.4.p2.3"
 GRAPHICS_VERSION_SUFFIX      = "aarch32"
 GRAPHICS_VERSION_SUFFIX_mx8  = "aarch64"
 
 PREFERRED_VERSION_imx-gpu-viv               = "${GRAPHICS_VERSION}-${GRAPHICS_VERSION_SUFFIX}"
 PREFERRED_VERSION_xf86-video-imx-vivante    = "${GRAPHICS_VERSION}"
 PREFERRED_VERSION_kernel-module-imx-gpu-viv = "${GRAPHICS_VERSION}"
-PREFERRED_VERSION_imx-gpu-g2d               = "${GRAPHICS_VERSION}"
-PREFERRED_VERSION_openssl                   = "1.0.2m"
-PREFERRED_VERSION_openssl-native            = "1.0.2m"
+PREFERRED_VERSION_imx-gpu-g2d               = "${GRAPHICS_VERSION}-${GRAPHICS_VERSION_SUFFIX}"
+PREFERRED_VERSION_openssl                   = "1.0.2p"
+PREFERRED_VERSION_openssl-native            = "1.0.2p"
 
 
 SOC_HAS_VIVANTE_KERNEL_DRIVER_SUPPORT_mx6 = "1"
@@ -203,6 +203,4 @@ SPL_BINARY_mx6ul = ""
 UBOOT_MAKE_TARGET_mx6ul = "u-boot.imx"
 
 BBMASK += "meta-freescale/recipes-graphics/wayland/weston_%.bbappend"
-BBMASK += "meta-freescale/dynamic-layers/browser-layer/recipes-browser/chromium/chromium_52.0.2743.76.bbappend"
-BBMASK += "meta-freescale/dynamic-layers/browser-layer/recipes-browser/chromium/chromium-wayland_48.0.2548.0.bbappend"
 
