--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
-BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
+# BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
