flir.conf: Removed rootfs size limitation to be able to build qt5 images
The limitation should preferrably not be set in .conf
Rather in bblc (and other) image recipes (using .inc or bbclass)

Also removed redpine from fsl-image-qt5.bbappend

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -73,10 +73,10 @@ PREFERRED_PROVIDER_udev-utils ?= "systemd"
 DEFAULT_TIMEZONE = "Europe/Paris"
 
 # maximum allowed rootfs size in kB
-IMAGE_ROOTFS_MAXSIZE ?= "2500000"
-IMAGE_OVERHEAD_FACTOR = "1"
+# IMAGE_ROOTFS_MAXSIZE ?= "2500000"
+# IMAGE_OVERHEAD_FACTOR = "1"
 #leave 10MB free space on rootfs
-IMAGE_ROOTFS_EXTRA_SPACE = "10000"
+# IMAGE_ROOTFS_EXTRA_SPACE = "10000"
 
 #use no prefix or we will get conflicting _ in kernel module name
 KERNEL_MODULE_PACKAGE_SUFFIX = ""
