mtp mounter: export /FLIR/images (initially /FLIR/system) [SHLK-442]

--- a/recipes-connectivity/gadgetload/files/umtprd.conf
+++ b/recipes-connectivity/gadgetload/files/umtprd.conf
@@ -10,7 +10,7 @@ loop_on_disconnect 1
 #storage command : Create add a storage entry point. Up to 16 entry points supported
 #Syntax : storage "PATH" "NAME"
 
-storage "/FLIR/system"      "Images"
+storage "/FLIR/images"      "Images"
 #storage "/home"  "home folder"
 
 # Set the USB manufacturer string
