--- a/recipes-flir/appcore/files/flirapp.service
+++ b/recipes-flir/appcore/files/flirapp.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=FLIR flirapp (appcore et al) service 
-After=connman.service systemd-journald.service progressapp.service
+After=connman.service systemd-journald.service progressapp.service videorender.service
 
 [Service]
 Type=simple
