ec201 machine: add ec201 rev a (imx7ulp-sherlock-a.dtb)  device tree to image

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -12,6 +12,7 @@ require conf/machine/include/tune-cortexa7.inc
 MACHINE_FEATURES += "wifi"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
+KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
 
 UBOOT_CONFIG ??= "ec201"
 UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
