[SHLK-1100] Enable bluetooth at startup, set bt addr from cmdline or devicetree.

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -9,7 +9,7 @@ MACHINEOVERRIDES =. "mx7:mx7ulp:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
-MACHINE_FEATURES += "wifi"
+MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
