SHLK-1137 Support for ec201 rev.C. Use rev.C device-tree as default. Change touch-led driver to lp5562. Change sysfs-links to support rev-b as well. Change accelerometer to kxtj3. Add vcam dovdd signal, add dummy vcam clk_en signal.

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -13,6 +13,7 @@ MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
+KERNEL_DEVICETREE += "imx7ulp-sherlock-b.dtb"
 
 UBOOT_CONFIG ??= "ec201"
 UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
