Removes various warnings when running bitbake
* Set layer compability to sumo (2.5)
* Remove unused meta-gnome layer, warning about missing x11
* add Ubunutu 18.04 to verified distributions

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,6 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
+LAYERSERIES_COMPAT_flir-base = "sumo"
+
 # BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
