--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -116,6 +116,7 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-16.04 \n \
             ubuntu-16.10 \n \
             ubuntu-17.04 \n \
+            ubuntu-18.04 \n \
             fedora-24 \n \
             fedora-25 \n \
             fedora-26 \n \
