Change SERIAL_CONSOLE to SERIAL_CONSOLES to get correct device in busybox-inittab

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -25,6 +25,4 @@ IMX_DEFAULT_KERNEL_mx7ulp = "linux-imx"
 
 
 # Set Serial console
-SERIAL_CONSOLE = "115200 ttyLP0"
-
-
+SERIAL_CONSOLES = "115200;ttyLP0"
