Remove unused distro feature 3g modem

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -25,7 +25,7 @@ FLIR_DISTRO_FEATURES += "eabi largefile wayland pam"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${FLIR_DISTRO_FEATURES}"
 
-DISTRO_FEATURES_remove = "x11 directfb pango"
+DISTRO_FEATURES_remove = "x11 directfb pango 3g"
 # Do not add in the backfilled distro features listed below
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
