Move videorender/data-collection workers to appkit [SHLK-1711]
Original videorender/data-collection recipes split into 2 parts,
worker + service starter
Service starters as part of flir-image-sherlock (meta-flir-base)
videorender/data-collection workers (meta-flir-internal, generated .ipks)
expected to externally installed below /FLIR/usr

--- a/recipes-flir/videorender/files/videorender.service
+++ b/recipes-flir/videorender/files/videorender.service
@@ -4,7 +4,8 @@ After=weston.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/videorender.sh
+ExecStart=/FLIR/usr/bin/videorender.sh
+Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
 
 [Install]
 WantedBy=multi-user.target
