SHLK-1509 Match appid se.flir.progressapp to lock layer
Associate any shell_surfaces with appid se.flir.progressapp to the lock
layer. The lock layer is the layer with highest z-value in the layer
stack in Weston.

Remove clearing of frame buffers on Weston startup. The g2d_renderer
used in Weston clears the frame buffers upon initialization. This causes
a blue screen to appear during startup until a client connects and
displays a new frame.

Add the possibility to start a client automatically by Weston upon
startup. The client to start is specified in the weston.ini under
section "flir_startup" as "client", e.g:

[flir_startup]
client=/usr/bin/progressapp

--- a/recipes-graphics/wayland/weston-init/weston.service
+++ b/recipes-graphics/wayland/weston-init/weston.service
@@ -26,6 +26,7 @@ StandardInput=tty
 StandardError=journal
 
 EnvironmentFile=-/etc/default/weston
+Environment='LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/FLIR/usr/lib'
 
 # Weston does not successfully change VT, nor does systemd place us on
 # the VT it just activated for us. Switch manually:
