SHLK-1700: flir-image-sherlock.bb: Added dependency on url-service
url-service is a new Yocto recipe in meta-flir-internal.

--- a/recipes-flir/data-collection/files/data-collection.service
+++ b/recipes-flir/data-collection/files/data-collection.service
@@ -1,11 +1,8 @@
 [Unit]
 Description=FLIR Data Collection Service
+Wants=url.service
 
 [Service]
-ExecStartPre=-/bin/mkdir -p /FLIR/system/data-collection/minidumps
-ExecStartPre=-/bin/mkdir -p /FLIR/system/data-collection/statistics
-ExecStart=/FLIR/usr/bin/data-collection /FLIR/usr/etc/data-collection.conf
+ExecStart=/FLIR/usr/bin/start-data-collection
 Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
 
-[Install]
-WantedBy=multi-user.target
