sftp autenticated access to camera files added
A pubsftp user is used to enable autenticated file access using sftp
The user pubsftp is chrooted to /FLIR/images.
Public key is registered using "FLIR SSL - encrypted socket interface"
(see confluence)
Enabled keys may access images using sftp pubsftp@<cam ip>
pubsftp account will only accept sftp (not ssh)
pubsftp root is /FLIR/images

flirapp now runs with group=userdata
This allows pubsftp user to access stored files

--- a/recipes-flir/appcore/files/flirapp.service
+++ b/recipes-flir/appcore/files/flirapp.service
@@ -14,6 +14,7 @@ ExecStop=/usr/bin/killall -HUP appcore
 KillMode=control-group
 TimeoutStopSec=10
 Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
+Group=userdata
 
 [Install]
 WantedBy=multi-user.target
