--- a/recipes-flir/videorender/files/videorender.service
+++ b/recipes-flir/videorender/files/videorender.service
@@ -6,6 +6,7 @@ After=weston.service
 Type=simple
 ExecStart=/FLIR/usr/bin/videorender.sh
 Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
+ExecStopPost=/sbin/systemd-failure-notifier "%n" "%i"
 
 [Install]
 WantedBy=multi-user.target
