--- a/recipes-flir/appcore/files/flirapp.service
+++ b/recipes-flir/appcore/files/flirapp.service
@@ -12,5 +12,7 @@ TimeoutStopSec=10
 Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
 Group=userdata
 
+ExecStopPost=/sbin/systemd-failure-notifier "%n" "%i"
+
 [Install]
 WantedBy=multi-user.target
