flir-distro: Update upstream distro codename

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -4,7 +4,7 @@
 DISTRO = "flir"
 DISTRO_NAME = "FlirSystem"
 DISTRO_VERSION = "${SRCDATE}"
-DISTRO_CODENAME = "sumo"
+DISTRO_CODENAME = "warrior"
 SDK_VENDOR = "-pokysdk"
 SDK_VERSION := "2.7"
 
@@ -19,7 +19,7 @@ HOSTTOOLS_append = " p4"
 
 IMAGE_FSTYPES = "tar.bz2 ext4"
 
-FLIR_DISTRO_FEATURES = "ipv4 systemd  usbhost usbgadget opengl"
+FLIR_DISTRO_FEATURES = "ipv4 systemd usbhost usbgadget opengl"
 FLIR_DISTRO_FEATURES += "wifi bluetooth pulseaudio alsa bluez5"
 FLIR_DISTRO_FEATURES += "eabi largefile wayland pam"
 
