--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -153,6 +153,7 @@ PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-imx"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-imx"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils"
 
+# TODO: Migrate to u-boot 2019.04
 PREFERRED_VERSION_u-boot-imx = "2018.03"
 #PREFERRED_VERSION_u-boot-fw-utils = "2018.03"
 
