Use dynamic layers for recipes dependent on meta-fsl-bsp-release meta-freescale

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,6 +9,15 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
-LAYERSERIES_COMPAT_flir-base = "warrior"
+LAYERSERIES_COMPAT_flir-base = "zeus"
+
+
+BBFILES_DYNAMIC += " \
+    meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bb \
+    meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bbappend \
+        \
+    meta-freescale:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bb \
+    meta-freescale:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bbappend \
+"
 
 # BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
