SHLK-2364 SHLK-1608 Ethernet and Wifi should be prefered over bluetooth or usb-gadget.

--- a/recipes-connectivity/connman/files/main.conf
+++ b/recipes-connectivity/connman/files/main.conf
@@ -51,7 +51,7 @@ DefaultAutoConnectTechnologies = ethernet,wifi,bluetooth
 # of a preferred technology type in state 'online' will get
 # the default route when compared to either a non-preferred
 # type or a preferred type further down in the list.
-PreferredTechnologies = bluetooth,ethernet,wifi
+PreferredTechnologies = ethernet,wifi,bluetooth
 
 # List of blacklisted network interfaces separated by ",".
 # Found interfaces will be compared to the list and will
