--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,8 +9,9 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
-LAYERSERIES_COMPAT_flir-base = "zeus"
+LAYERSERIES_COMPAT_flir-base = "rocko zeus"
 
+BB_DANGLINGAPPENDS_WARNONLY = "true"
 
 BBFILES_DYNAMIC += " \
     meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bb \
