--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -11,7 +11,9 @@ SDK_VERSION := "2.5"
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
 # Additional p4 tool addition - might be solved better?
-HOSTTOOLS_append = " p4"
+# _NONFATAL means that missing local installation of p4 is not an issue
+# meta-flir-base layer does not need "p4" (anymore)
+HOSTTOOLS_NONFATAL_append = " p4"
 
 ########################################################################
 # DISTRO FEATURE SELECTION
