Add thud to compatible layer. This is needed by qualcomm RB5 yocto 2.6 distro

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
-LAYERSERIES_COMPAT_flir-base = "rocko zeus"
+LAYERSERIES_COMPAT_flir-base = "rocko zeus thud"
 
 BB_DANGLINGAPPENDS_WARNONLY = "true"
 
