--- a/recipes-flir/systemd/files/journald.conf
+++ b/recipes-flir/systemd/files/journald.conf
@@ -19,11 +19,11 @@
 #SyncIntervalSec=5m
 #RateLimitIntervalSec=30s
 #RateLimitBurst=1000
-SystemMaxUse=4M
+#SystemMaxUse=
 #SystemKeepFree=
 #SystemMaxFileSize=
 #SystemMaxFiles=100
-RuntimeMaxUse=4M
+RuntimeMaxUse=8M
 #RuntimeKeepFree=
 #RuntimeMaxFileSize=
 #RuntimeMaxFiles=100
