sftp: make sure that /FLIR/images is chroot-able [SHLK-2583]
(Note that we must wait with chmod until /FLIR/images is mounted
by FLIR-images.mount)

--- a/recipes-flir/pubsftp/files/pubsftp.service
+++ b/recipes-flir/pubsftp/files/pubsftp.service
@@ -2,7 +2,7 @@
 Description=Do necessary bind mounts for public sftp access
 DefaultDependencies=no
 Conflicts=shutdown.target
-After=systemd-remount-fs.service
+After=systemd-remount-fs.service FLIR-images.mount
 Before=sshd.socket shutdown.target
 
 [Service]
