--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
-LAYERSERIES_COMPAT_flir-base = "rocko zeus thud"
+LAYERSERIES_COMPAT_flir-base = "rocko zeus thud dunfell"
 
 BB_DANGLINGAPPENDS_WARNONLY = "true"
 
