linux-pingu: Fixes erroneous SRC_URI

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -1,5 +1,5 @@
-FLIRSE_DRV_MIRROR ?= "git://se-arn-dev5"
-FLIRSE_DRV_PROTOCOL ?= ";protocol=git"
+FLIRSE_DRV_MIRROR ?= "git://git@bitbucketcommercial.flir.com:7999"
+FLIRSE_DRV_PROTOCOL ?= ";protocol=ssh"
 
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-module-atheros/kernel-module-atheros.bbappend"
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-modules"
