FLIRSE_DRV_MIRROR tweaked to be compatible with other branches

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -1,4 +1,4 @@
-FLIRSE_DRV_MIRROR ?= "git://git@bitbucketcommercial.flir.com:7999"
+FLIRSE_DRV_MIRROR ?= "git://git@bitbucketcommercial.flir.com:7999/camos"
 FLIRSE_DRV_PROTOCOL ?= ";protocol=ssh"
 
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-module-atheros/kernel-module-atheros.bbappend"
