Add flir-wayland.conf distro and fix minor details in evco.conf

--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -33,11 +33,6 @@ PREFERRED_VERSION_linux-pingu = "5.4.%"
 
 KERNEL_IMAGETYPE = "uImage"
 
-# FIXME: SOC_FAMILY is probably not needed, at least not in this form.
-# Refer to meta-freescale/recipes-bsp/imx-mkimage/imx-boot_0.2.bb
-# which is where it is used
-SOC_FAMILY = "mx6:mx6dl"
-
 # Platform u-boot settings
 UBOOT_ENTRYPOINT = "0x10800000"
 UBOOT_SUFFIX = "imx"
@@ -81,4 +76,4 @@ BBFILE_PATTERN_digi-arm = ""
 BBFILE_PATTERN_dey = ""
 BBFILE_PATTERN_fsl-demos = ""
 
-IMAGE_FSTYPES = "tar.gz"
+IMAGE_FSTYPES_append = " tar.gz"
