meta-flir-base: Add yocto download and sstate mirrors
Adding yocto sstate and download mirrors, pointing to se-arn-dev5
Makefile build has target to deploy sstate cache to the server

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -1,6 +1,9 @@
 FLIRSE_DRV_MIRROR ?= "git://git@bitbucketcommercial.flir.com:7999/camos"
 FLIRSE_DRV_PROTOCOL ?= ";protocol=ssh"
 
+SOURCE_MIRROR_URL ?= "http://se-arn-dev5/yocto-flirmirror/dl_yocto3.0"
+SSTATE_MIRRORS ?= "file://.* http://se-arn-dev5/yocto-flirmirror/sstate_yocto3.0/${MACHINE}/PATH"
+
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-module-atheros/kernel-module-atheros.bbappend"
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-modules"
 BBMASK += "/meta-flir-base/recipes-kernel/linux-firmware"
