distros: Added flir-framebuffer based on flir-wayland
Also slight update fo flir-wayland distro

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -2,9 +2,9 @@
 # DISTRO CONFIGURATION
 ########################################################################
 DISTRO = "flir-wayland"
-DISTRO_NAME = "FlirSystem"
+DISTRO_NAME = "FlirSystem Wayland"
 DISTRO_VERSION = "3.0.0"
-DISTRO_CODENAME = "zeus-wl"
+DISTRO_CODENAME = "zeus-flir-wl"
 SDK_VENDOR = "-pokysdk"
 SDK_VERSION = "3.0"
 
@@ -155,35 +155,3 @@ MACHINE_GSTREAMER_1_0_PLUGIN_mx6sx = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx7d = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx7ulp = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx8 = "imx-gst1.0-plugin"
-
-# Default toolchains used in testing i.MX BSPs
-# (should be) already set with imx-base.inc
-#DEFAULTTUNE_mx6   = "cortexa9hf-neon"
-#DEFAULTTUNE_mx6ul = "cortexa7hf-neon"
-#DEFAULTTUNE_mx6sll = "cortexa9hf-neon"
-#DEFAULTTUNE_mx7d   = "cortexa7hf-neon"
-#DEFAULTTUNE_mx7ulp = "cortexa7hf-neon"
-#DEFAULTTUNE_mx8 = "aarch64"
-
-# preferred versions of recipes-graphics
-# already set with imx-base.inc
-#PREFERRED_PROVIDER_virtual/libg2d_mx6 = "imx-gpu-g2d"
-#PREFERRED_PROVIDER_virtual/libg2d_mx7ulp = "imx-gpu-g2d"
-#PREFERRED_PROVIDER_virtual/egl_mx7ulp = "imx-gpu-viv"
-#PREFERRED_PROVIDER_virtual/libgles1_mx7ulp = "imx-gpu-viv"
-#PREFERRED_PROVIDER_virtual/libgles2_mx7ulp = "imx-gpu-viv"
-#PREFERRED_PROVIDER_virtual/libgl_mx7ulp = "imx-gpu-viv"
-
-# not used
-#SOC_HAS_VIVANTE_KERNEL_DRIVER_SUPPORT_mx6 = "1"
-#SOC_HAS_VIVANTE_KERNEL_DRIVER_SUPPORT_mx7ulp = "1"
-
-# We're not using mx6ul are we? And anyway, this should go somewhere else,
-# like in a  machine configuration file.
-#UBOOT_SUFFIX_mx6ul = "imx"
-#SPL_BINARY_mx6ul = ""
-#UBOOT_MAKE_TARGET_mx6ul = "u-boot.imx"
-
-# No need for this
-#BBMASK += "meta-freescale/recipes-graphics/wayland/weston_%.bbappend"
-
