[CIRRUS-34] haproxy: Bump to 1.8.26 and fixup recipe
* Keep all configuration for ec201 as it used to be.
* Update configuration for ec501 to current on Yocto2.0.
* Fixup recipe problems and make use of regular FILESPATH settings picking
  files from files/${MACHINE} with priority over the default ones located
  directly under files/.

--- a/recipes-flir/haproxy/files/haproxy_https.cfg
+++ b/recipes-flir/haproxy/files/haproxy_https.cfg
@@ -5,12 +5,16 @@ frontend ssl
     acl is_websocket hdr(Upgrade) -i WebSocket
     acl is_websocket hdr_beg(Host) -i ws
     acl is_mjpg path_beg -i /mjpg
+    acl is_avc path_beg -i /avc
+    acl is_mpeg4 path_beg -i /mpeg4
     acl is_onvif path_beg -i /onvif
     acl is_onvsm path_beg -i /onvsm
     acl is_api path_beg -i /api/
     use_backend api_backend if is_api
     use_backend socket_backend if is_websocket
     use_backend mjpg_backend if is_mjpg
+    use_backend avc_backend if is_avc
+    use_backend mpeg4_backend if is_mpeg4
     use_backend onvif_backend if is_onvif
     use_backend onvifsm_backend if is_onvsm
     option originalto
