--- a/recipes-flir/haproxy/files/ec501/haproxy.cfg
+++ b/recipes-flir/haproxy/files/ec501/haproxy.cfg
@@ -17,19 +17,28 @@ backend api_backend
 
 backend mjpg_backend
     balance roundrobin
-    timeout server 30000
     timeout connect 4000
-    server apiserver 127.0.0.1:14011 weight 1 maxconn 1024 check
+    server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
+
+backend avc_backend
+    balance roundrobin
+    timeout connect 4000
+    server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
+
+backend mpeg4_backend
+    balance roundrobin
+    timeout connect 4000
+    server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
 backend onvif_backend
     balance roundrobin
-    timeout server 30000
+    timeout server 61000
     timeout connect 4000
     server apiserver 127.0.0.1:3000 weight 1 maxconn 1024 check
 
 backend onvifsm_backend
     balance roundrobin
-    timeout server 30000
+    timeout server 61000
     timeout connect 4000
     server apiserver 127.0.0.1:8100 weight 1 maxconn 1024 check
 
