[CIRRUS-34] flir-image: Incomplete but buildable flir-image for evco

--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -76,4 +76,4 @@ BBFILE_PATTERN_digi-arm = ""
 BBFILE_PATTERN_dey = ""
 BBFILE_PATTERN_fsl-demos = ""
 
-IMAGE_FSTYPES_append = " tar.gz"
+IMAGE_FSTYPES = "tar.gz ext4"
