flir-wayland distro: add uninative, preferred_version/provider + more
A number of preferred provider/version settings copied from
meta-imx/meta-sdk fsl-imx-preferred-env.inc / fsl-imx-base.inc

"uninative" is defined. We should then get a common host environment
independent of distro versin (i.e. ubuntu) according to Ola Redell

ubuntu 20.04 and LinuxMint 20 are considered "sanity tested"

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -106,6 +106,8 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-16.04 \n \
             ubuntu-18.04 \n \
             ubuntu-19.04 \n \
+            ubuntu-20.04 \n \
+            linuxmint-20 \n \
             fedora-28 \n \
             fedora-29 \n \
             fedora-30 \n \
@@ -155,3 +157,30 @@ MACHINE_GSTREAMER_1_0_PLUGIN_mx6sx = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx7d = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx7ulp = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx8 = "imx-gst1.0-plugin"
+
+# copied from meta-imx/meta-sdk fsl-imx-preferred-env.inc / fsl-imx-base.inc: 
+IMX_GPU_VERSION            ?= "6.4.3.p1.0"
+IMX_GPU_VERSION_SUFFIX      = "aarch32"
+IMX_GPU_VERSION_SUFFIX_mx8  = "aarch64"
+
+REMOVE_VULKAN_FEATURE = "vulkan"
+
+PREFERRED_VERSION_imx-gpu-viv               = "${IMX_GPU_VERSION}-${IMX_GPU_VERSION_SUFFIX}"
+PREFERRED_VERSION_kernel-module-imx-gpu-viv = "${IMX_GPU_VERSION}"
+PREFERRED_VERSION_imx-gpu-g2d               = "${IMX_GPU_VERSION}"
+
+PREFERRED_PROVIDER_opencl-headers_imx = "imx-gpu-viv"
+
+PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.16.2.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-bad  = "1.16.2.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-good = "1.16.2.imx"
+PREFERRED_VERSION_gstreamer1.0              = "1.16.2.imx"
+PREFERRED_VERSION_gstreamer1.0-libav        = "1.16.2"
+
+PREFERRED_VERSION_opengl-es-cts     = "3.2.6.1"
+PREFERRED_VERSION_opengl-es-cts_mx6 = "3.2.4.0"
+PREFERRED_VERSION_opengl-es-cts_mx7 = "3.2.4.0"
+
+require conf/distro/include/yocto-uninative.inc
+require conf/distro/include/security_flags.inc
+INHERIT += "uninative"
