flir-image: Add qt5+wayland and start weston
To be able to patch qt5 recipes, a FLIR qt5 dynamic layer has been added

Note that we need to checkout qtwayland at a later tag than "original"
(set by nxp in "release" rel_imx_5.4.70_2.3.0)
Otherwise we will get a build error for qtwayland regarding libdrm
(solved by qtwayland 1344ca6)

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,6 +19,9 @@ BBFILES_DYNAMIC += " \
         \
     meta-freescale:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bb \
     meta-freescale:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bbappend \
+        \
+    qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bb \
+    qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bbappend \
 "
 
 # BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
