meta-flir-base: Initial adaption to yocto3.2 (gatesgarth)
5.10.9 kernel (in linux-pingu54)
A few recipes in flir-image does not build as of now
(See UNAVAILABLE_PACKAGES32)

Kernel boots and runs.
graphics+ethernet+usb net+wayland videotestsrc works

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -3,10 +3,10 @@
 ########################################################################
 DISTRO = "flir-wayland"
 DISTRO_NAME = "FlirSystem Wayland"
-DISTRO_VERSION = "3.0.0"
-DISTRO_CODENAME = "zeus-flir-wl"
+DISTRO_VERSION = "3.2.0"
+DISTRO_CODENAME = "gatesgarth-flir-wl"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION = "3.0"
+SDK_VERSION = "3.2"
 
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
@@ -146,7 +146,7 @@ PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils"
 #PREFERRED_VERSION_u-boot-imx = "2018.03"
 #PREFERRED_VERSION_u-boot-fw-utils = "2018.03"
 
-PREFERRED_VERSION_linux-libc-headers_imx = "5.4"
+PREFERRED_VERSION_linux-libc-headers_imx ?= "5.10"
 
 MACHINE_GSTREAMER_1_0_PLUGIN_mx6ul = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx6sll = "imx-gst1.0-plugin"
@@ -159,7 +159,7 @@ MACHINE_GSTREAMER_1_0_PLUGIN_mx7ulp = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx8 = "imx-gst1.0-plugin"
 
 # copied from meta-imx/meta-sdk fsl-imx-preferred-env.inc / fsl-imx-base.inc: 
-IMX_GPU_VERSION            ?= "6.4.3.p1.0"
+IMX_GPU_VERSION            ?= "6.4.3.p1.2"
 IMX_GPU_VERSION_SUFFIX      = "aarch32"
 IMX_GPU_VERSION_SUFFIX_mx8  = "aarch64"
 
@@ -171,11 +171,12 @@ PREFERRED_VERSION_imx-gpu-g2d               = "${IMX_GPU_VERSION}"
 
 PREFERRED_PROVIDER_opencl-headers_imx = "imx-gpu-viv"
 
-PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.16.2.imx"
-PREFERRED_VERSION_gstreamer1.0-plugins-bad  = "1.16.2.imx"
-PREFERRED_VERSION_gstreamer1.0-plugins-good = "1.16.2.imx"
-PREFERRED_VERSION_gstreamer1.0              = "1.16.2.imx"
-PREFERRED_VERSION_gstreamer1.0-libav        = "1.16.2"
+PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.18.0.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-bad  = "1.18.0.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-good = "1.18.0.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-good-qt = "1.18.0.imx"
+PREFERRED_VERSION_gstreamer1.0              = "1.18.0.imx"
+PREFERRED_VERSION_gstreamer1.0-libav        = "1.18.0"
 
 PREFERRED_VERSION_opengl-es-cts     = "3.2.6.1"
 PREFERRED_VERSION_opengl-es-cts_mx6 = "3.2.4.0"
