--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -29,7 +29,7 @@ UBOOT_CONFIG[mfgtool] = "mx6qpsabresd_config"
 UBOOT_CONFIG[sd-optee] = "mx6qpsabresd_optee_config,sdcard"
 
 PREFERRED_PROVIDER_virtual/kernel_evco = "linux-pingu"
-PREFERRED_VERSION_linux-pingu = "5.4.%"
+PREFERRED_VERSION_linux-pingu = "5.10%"
 
 KERNEL_IMAGETYPE = "uImage"
 
