--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "flir-base"
 BBFILE_PATTERN_flir-base := "^${LAYERDIR}/"
 BBFILE_PRIORITY_flir-base = "9"
 
-LAYERSERIES_COMPAT_flir-base = "rocko zeus thud dunfell"
+LAYERSERIES_COMPAT_flir-base = "rocko zeus thud dunfell gatesgarth"
 
 BB_DANGLINGAPPENDS_WARNONLY = "true"
 
@@ -25,3 +25,4 @@ BBFILES_DYNAMIC += " \
 "
 
 # BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
+BBMASK += "/meta-boundary/recipes-connectivity/bluez5/*"
