--- a/conf/distro/flir-framebuffer.conf
+++ b/conf/distro/flir-framebuffer.conf
@@ -2,7 +2,7 @@ require flir-wayland.conf
 
 DISTRO = "flir-framebuffer"
 DISTRO_NAME = "FlirSystem Framebuffer"
-DISTRO_CODENAME = "zeus-flir-fb"
+DISTRO_CODENAME = "gatesgarth-flir-fb"
 
 # Remove conflicting backends.
 DISTRO_FEATURES_remove = "wayland"
