flir-wayland.conf: Add linuxmint-20.1 as sanity tested distro
Yocto bitbake seems to work fine at my host after updating to
linuxmint 20.1

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -108,6 +108,7 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-19.04 \n \
             ubuntu-20.04 \n \
             linuxmint-20 \n \
+            linuxmint-20.1 \n \
             fedora-28 \n \
             fedora-29 \n \
             fedora-30 \n \
