evco.conf flir-image: Add machine firmware

--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -49,6 +49,7 @@ MACHINE_EXTRA_RDEPENDS += " \
 "
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 MACHINE_EXTRA_RRECOMMENDS += "fsl-alsa-plugins"
+MACHINE_EXTRA_RRECOMMENDS_remove = "kernel-module-nxp89xx linux-firmware-nxp89xx"
 
 KERNEL_DEVICETREE = "imx6dl-${MACHINE}.dtb \
 		     imx6dl-${MACHINE}-db.dtb \
