flir-functions.inc: aligend with yocto3.3 edits

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -1,2 +1,8 @@
 FLIRSE_DRV_MIRROR ?= "git://git@bitbucketcommercial.flir.com:7999/camos"
 FLIRSE_DRV_PROTOCOL ?= ";protocol=ssh"
+
+# Avoid Pseudo mixing up things when digging into the .repo directory
+REPODIR="${BSPDIR}/.repo"
+PSEUDO_IGNORE_PATHS_append = ",${REPODIR}"
+
+
