--- a/conf/site.conf
+++ b/conf/site.conf
@@ -4,6 +4,10 @@ FLIRSE_DRV_PROTOCOL ?= ";protocol=ssh"
 SOURCE_MIRROR_URL ?= "http://se-arn-dev5/yocto-flirmirror/dl_yocto3.0"
 SSTATE_MIRRORS ?= "file://.* http://se-arn-dev5/yocto-flirmirror/sstate_yocto3.0/${MACHINE}/PATH"
 
+# Avoid Pseudo mixing up things when digging into the .repo directory
+REPODIR="${BSPDIR}/.repo"
+PSEUDO_IGNORE_PATHS_append = ",${REPODIR}"
+
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-module-atheros/kernel-module-atheros.bbappend"
 BBMASK += "/meta-flir-base/recipes-kernel/kernel-modules"
 BBMASK += "/meta-flir-base/recipes-kernel/linux-firmware"
