Enabled (working) ec501 MACHINE [CIRRUS-157]
Notes:
ec501 for now uses identical linux config as evco
ipv6 is NOT enabled yet (ec501.conf / linux config)

--- a/conf/machine/ec501.conf
+++ b/conf/machine/ec501.conf
@@ -3,15 +3,22 @@
 #@SOC: i.MX6DL
 #@DESCRIPTION: Machine configuration for Flir Systems EC501 Board
 
-include conf/machine/include/imx-base.inc
-include conf/machine/include/tune-cortexa9.inc
+# From imx6sabresd-common.inc:
+require conf/machine/include/imx-base.inc
+require conf/machine/include/tune-cortexa9.inc
+SERIAL_CONSOLES = "115200;ttymxc0"
 
-PREFERRED_PROVIDER_u-boot = "u-boot-pingu"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-pingu"
+MACHINEOVERRIDES =. "mx6:mx6dl:"
 
-PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils-pingu"
+# FIXME: Switch over to our own u-boot-pingu later on...
+#PREFERRED_PROVIDER_u-boot = "u-boot-pingu"
+#PREFERRED_PROVIDER_virtual/bootloader = "u-boot-pingu"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-pingu"
+#PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils-pingu"
+
+PREFERRED_PROVIDER_virtual/kernel_ec501 = "linux-pingu"
+PREFERRED_VERSION_linux-pingu = "5.10%"
+
 KERNEL_IMAGETYPE = "uImage"
 
 SOC_FAMILY = "mx6:mx6dl"
@@ -23,7 +30,8 @@ UBOOT_MACHINE ?= "ec501_config"
 
 # Firmware
 MACHINE_FIRMWARE ?= ""
-MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx6q"
+# FIXME: Uncomment this?
+#MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx6q"
 
 MACHINE_EXTRA_RDEPENDS += " \
     e2fsprogs \
@@ -39,7 +47,6 @@ KERNEL_DEVICETREE = "imx6dl-beco.dtb \
 		     imx6dl-hawk.dtb \
 		     "
 
-SERIAL_CONSOLES = "115200;ttymxc0"
 
 # Boot partition size for FAT image generation, 64MiB
 BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
@@ -47,7 +54,8 @@ BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
 MACHINE_GSTREAMER_PLUGIN = "gst1.0-fsl-plugin"
 
 # This is more product specific than machine specific but...
-FLIR_OPTIONALS = "ipv6"
+# FLIR_OPTIONALS = "ipv6"
+# Note that you also need ipv6 support in kernel config to enable ipv6 here
 
 # Maybe un-orthodox? Masking in machine conf 
 
@@ -56,3 +64,5 @@ BBMASK .= "|.*kernel-module-atheros/"
 BBFILE_PATTERN_digi-arm = ""
 BBFILE_PATTERN_dey = ""
 BBFILE_PATTERN_fsl-demos = ""
+
+IMAGE_FSTYPES = "tar.gz ext4"
