CIRRUS-156 defconfig: Use same defconfig for evco and ec501
evco and ec501 have identical kernel configurations in different config
files. Use the same defconfig file for them both.

Also remove kernel-module-nxp89xx and linux-firmware-nxp89xx from MACHINE
recommendations. They do not build.

--- a/conf/machine/ec501.conf
+++ b/conf/machine/ec501.conf
@@ -38,6 +38,7 @@ MACHINE_EXTRA_RDEPENDS += " \
     e2fsprogs-mke2fs \
 "
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
+MACHINE_EXTRA_RRECOMMENDS_remove = "kernel-module-nxp89xx linux-firmware-nxp89xx"
 MACHINE_FEATURES="apm usbgadget vfat pci wifi rtc"
 
 KERNEL_DEVICETREE = "imx6dl-beco.dtb \
