flirapp.service: Prepared (temporary) workaround for correct autostart
fvdk as ported to 5.10 kernel version needs a separate "fvd init" call
(at least for now)
Such call is not needed in earlier (3.14 kernel) version
Instead of just adding a call to appcore, we better fix this in fvd/bifrost

For the moment, edit flirapp.service (/lib/systemd/system/flirapp.service)
in target as described to get flirapp autostarted correctly
(or run fvd init from command line prior to systemctl restart flirapp)

--- a/recipes-flir/appcore/files/flirapp.service
+++ b/recipes-flir/appcore/files/flirapp.service
@@ -5,6 +5,8 @@ After=connman.service systemd-journald.service progressapp.service
 [Service]
 Type=simple
 ExecStartPre=/bin/bash -c '/usr/sbin/flirapp_env_check.sh'
+# Uncomment next line for (temporary) working cirrus autostart 
+# ExecStartPre=/bin/bash -c '/FLIR/usr/bin/fvd init'
 ExecStart=/FLIR/usr/bin/appcore -d
 ExecStop=/usr/bin/killall -HUP appcore
 KillMode=control-group
